@@ -1,6 +1,177 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
+	<defaultcontrol always="true">3</defaultcontrol>
+	<include>dialogeffect</include>
 	<controls>
-		<!-- ADDED BY GADE! -->
+		<control type="group">
+			<left>19</left>
+			<top>18.5</top>
+			<control type="image">
+				<description>background image</description>
+				<width>1242</width>
+				<height>683</height>
+				<texture border="50,100,50,50">dialogs/Dialog.png</texture>
+				<animation effect="fade" start="90" end="90" time="0" condition="Window.IsVisible(Visualisation)">Conditional</animation>
+			</control>
+			<control type="label" id="2">
+				<description>Heading label</description>
+				<left>50</left>
+				<top>50</top>
+				<width>1100</width>
+				<height>30</height>
+				<align>center</align>
+				<font>font16</font>
+				<label>$LOCALIZE[35058]</label>
+				<textcolor>orange</textcolor>
+				<shadowcolor>black</shadowcolor>
+			</control>
+			<control type="group">
+				<left>50</left>
+				<control type="label">
+					<top>100</top>
+					<font>font12</font>
+					<textcolor>blue</textcolor>
+					<width>230</width>
+					<height>45</height>
+					<align>center</align>
+					<aligny>center</aligny>
+					<label>$LOCALIZE[35050]</label>
+				</control>
+				<control type="grouplist" id="3">
+					<top>145</top>
+					<width>250</width>
+					<height>450</height>
+					<itemgap>0</itemgap>
+					<onup>60</onup>
+					<ondown>60</ondown>
+					<onleft>9000</onleft>
+					<onright>5</onright>
+					<pagecontrol>60</pagecontrol>
+				</control>
+				<control type="button" id="10">
+					<width>250</width>
+					<include>DialogButtonCommonValues</include>
+				</control>
+				<include content="DialogGameControllersPagecontrol">
+					<param name="container_id" value="3" />
+					<param name="pagecontrol_id" value="60" />
+					<param name="onleft" value="3" />
+					<param name="onright" value="61" />
+				</include>
+			</control>
+			<control type="gamecontroller" id="31">
+				<top>145</top>
+				<left>305</left>
+				<width>330</width>
+				<height>330</height>
+			</control>
+			<control type="textbox" id="32">
+				<top>480</top>
+				<left>320</left>
+				<width>300</width>
+				<height>120</height>
+				<font>font10</font>
+				<textcolor>grey2</textcolor>
+				<align>center</align>
+				<aligny>center</aligny>
+				<autoscroll time="3000" delay="4000" repeat="5000">true</autoscroll>
+			</control>
+			<control type="group">
+				<left>650</left>
+				<control type="label">
+					<top>100</top>
+					<font>font12</font>
+					<textcolor>blue</textcolor>
+					<width>230</width>
+					<height>45</height>
+					<align>center</align>
+					<aligny>center</aligny>
+					<label>$LOCALIZE[35059]</label>
+				</control>
+				<control type="grouplist" id="5">
+					<top>145</top>
+					<width>250</width>
+					<height>450</height>
+					<itemgap>0</itemgap>
+					<onup>61</onup>
+					<ondown>61</ondown>
+					<onleft>3</onleft>
+					<onright>9000</onright>
+					<pagecontrol>61</pagecontrol>
+				</control>
+				<control type="button" id="7">
+					<width>250</width>
+					<include>DialogButtonCommonValues</include>
+				</control>
+				<control type="label" id="8">
+					<description>Default Controller Types Label</description>
+					<width>250</width>
+					<height>45</height>
+					<font>font12</font>
+					<textcolor>grey</textcolor>
+					<aligny>center</aligny>
+				</control>
+				<control type="image" id="9">
+					<height>45</height>
+					<texture />
+				</control>
+				<include content="DialogGameControllersPagecontrol">
+					<param name="container_id" value="5" />
+					<param name="pagecontrol_id" value="61" />
+					<param name="onleft" value="60" />
+					<param name="onright" value="9000" />
+				</include>
+			</control>
+			<control type="grouplist" id="9000">
+				<left>904</left>
+				<top>145</top>
+				<width>290</width>
+				<itemgap>0</itemgap>
+				<onleft>5</onleft>
+				<onright>3</onright>
+				<control type="button" id="18">
+					<description>Ok Button</description>
+					<label>$LOCALIZE[186]</label>
+					<width>290</width>
+					<align>center</align>
+					<include>DialogButton3CommonValues</include>
+				</control>
+				<control type="button" id="19">
+					<description>Reset Button</description>
+					<label>$LOCALIZE[13007]</label>
+					<width>290</width>
+					<align>center</align>
+					<include>DialogButton3CommonValues</include>
+				</control>
+				<control type="button" id="20">
+					<description>Install more controllers Button</description>
+					<label>$LOCALIZE[21452]</label>
+					<width>290</width>
+					<align>center</align>
+					<include>DialogButton3CommonValues</include>
+				</control>
+				<control type="button" id="22">
+					<description>Install all Button</description>
+					<label>$LOCALIZE[35021]</label>
+					<width>290</width>
+					<align>center</align>
+					<include>DialogButton3CommonValues</include>
+				</control>
+				<control type="button" id="21">
+					<description>Fix skipping Button</description>
+					<label>$LOCALIZE[35019]</label>
+					<width>290</width>
+					<align>center</align>
+					<include>DialogButton3CommonValues</include>
+				</control>
+				<control type="button" id="17">
+					<description>Help Button</description>
+					<label>$LOCALIZE[10043]</label>
+					<width>290</width>
+					<align>center</align>
+					<include>DialogButton3CommonValues</include>
+				</control>
+			</control>
+		</control>
 	</controls>
 </window>
