@@ -2241,4 +2241,52 @@
 			<info>ListItem.Label2</info>
 		</control>
 	</include>
+	<include name="DialogGameControllersPagecontrol">
+		<control type="group">
+			<left>16</left>
+			<top>595</top>
+			<control type="label">
+				<description>Page Count Label NoFocus</description>
+				<width>160</width>
+				<height>45</height>
+				<font>font12</font>
+				<textcolor>grey2</textcolor>
+				<scroll>false</scroll>
+				<align>right</align>
+				<aligny>center</aligny>
+				<label>$INFO[Container($PARAM[container_id]).NumItems] $LOCALIZE[31200]</label>
+				<animation effect="slide" end="70,0" condition="!Control.IsVisible($PARAM[pagecontrol_id])">Conditional</animation>
+				<visible>!Control.HasFocus($PARAM[pagecontrol_id]) + !String.IsEqual(Container($PARAM[pagecontrol_id]).NumItems,0)</visible>
+			</control>
+			<control type="label">
+				<description>Page Count Label Focus</description>
+				<width>160</width>
+				<height>45</height>
+				<font>font12</font>
+				<textcolor>orange</textcolor>
+				<scroll>false</scroll>
+				<align>right</align>
+				<aligny>center</aligny>
+				<label>$INFO[Container($PARAM[container_id]).NumItems] $LOCALIZE[31200]</label>
+				<animation effect="slide" end="70,0" condition="!Control.IsVisible($PARAM[pagecontrol_id])">Conditional</animation>
+				<visible>Control.HasFocus($PARAM[pagecontrol_id]) + !String.IsEqual(Container($PARAM[pagecontrol_id]).NumItems,0)</visible>
+			</control>
+			<control type="spincontrol" id="$PARAM[pagecontrol_id]">
+				<description>Next page Spinner</description>
+				<top>6</top>
+				<left>170</left>
+				<subtype>page</subtype>
+				<textoffsetx>80</textoffsetx>
+				<textoffsety>3</textoffsety>
+				<font />
+				<align>right</align>
+				<onleft>$PARAM[onleft]</onleft>
+				<onright>$PARAM[onright]</onright>
+				<onup>$PARAM[container_id]</onup>
+				<ondown>$PARAM[container_id]</ondown>
+				<showonepage>false</showonepage>
+				<visible>Container($PARAM[container_id]).HasNext | Container($PARAM[container_id]).HasPrevious</visible>
+			</control>
+		</control>
+	</include>
 </includes>
