@@ -1,3 +1,6 @@
+[B]Version 1.3.0[/B]
+- Add gaming support
+
 [B]Version 1.2.7[/B]
 - Add skin setting to use splash screen
 
